# napari-spatialomics-viewer

./: .gitignore  LICENSE  README.md  RELEASING.md  environment.yml  pyproject.toml
.claude/skills/create-release/: SKILL.md
.github/: release.yml
.github/workflows/: package-desktop-apps.yml
docs/: cortical_depth_annotation_guide.md  distance_object_annotation_guide.md  performance_notes.md
packaging/: requirements-build.txt
packaging/linux/: build_linux.sh  control.in  napari-compare-xenium-merscope  napari-compare-xenium-merscope.desktop
packaging/macos/: build_macos.sh
packaging/pyinstaller/: app_entry.py  napari_compare.spec
packaging/windows/: build_windows.ps1  installer.iss
scripts/: benchmark_transcript_store.py  napari_compare_xenium_merscope.py
src/napari_compare_xenium_merscope/: __init__.py  dask_cache.py  launcher.py  macos_app_build.py  macos_app_entry.py  utils.py  viewer.py
src/napari_compare_xenium_merscope/assets/: app_icon.icns
tests/: test_cell_inspector.py  test_dask_cache.py  test_dataset_sessions.py  test_gene_celltypes.py  test_gene_inspector.py  test_launcher.py  test_overlays.py  test_performance_loading.py  test_startup.py  test_utils.py
